# famous-last-words

./: Cargo.toml  README.md  cbindgen.toml  generate_headers.sh
headers/: flw.hpp
src/: edi.rs  hal9000.rs  lib.rs  multivac.rs  random_error.rs  terminator_genisys.rs  universal_ac.rs
src/hal9000/: mod.rs
src/multivac/: mod.rs
src/universal_ac/: mod.rs
