[package]
name = "famous-last-words"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com"]
description = "Error codes inspired by AIs, robots and other entities from books and movies"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/barafael/famous-last-words"

[dependencies]
# js feature for WASM compatibility.
getrandom = { version = "0.2.6", features = ["js"] }
rand = "0.8.5"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.31"
